Fixed spacing issue on framework header

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -34,6 +34,7 @@
       max-width: 800px;
       padding-left: 0;
       padding-right: 0;
+      padding-bottom: 35px;
       margin: auto;
     }
   }
